--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,35 @@
 * {
   margin: 0;
   padding: 0;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
 #main {
   min-width: 100%;
   min-height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   background-color: #323232;
 }
 
 #drum-machine {
   height: 350px;
+  -webkit-box-flex: 0;
+  -ms-flex: 0 0 700px;
   flex: 0 0 700px;
   background-color: #212121;
   border-radius: 5px;
-  border: 7px solid #0D7377;
+  border: 7px solid #0d7377;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -31,17 +42,84 @@
 #drum-set {
   height: 100%;
   width: 100%;
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: auto 5px auto 5px auto;
   grid-template-columns: auto auto auto;
+  -ms-grid-rows: auto 5px auto 5px auto;
   grid-template-rows: auto auto auto;
   gap: 5px;
 }
 
-.drum-pad, .drum-pad:active {
+#drum-set > *:nth-child(1) {
+  grid-row: 1;
+  grid-column: 1;
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+}
+
+#drum-set > *:nth-child(2) {
+  grid-row: 1;
+  grid-column: 3;
+  -ms-grid-row: 1;
+  -ms-grid-column: 3;
+}
+
+#drum-set > *:nth-child(3) {
+  grid-row: 1;
+  grid-column: 5;
+  -ms-grid-row: 1;
+  -ms-grid-column: 5;
+}
+
+#drum-set > *:nth-child(4) {
+  grid-row: 3;
+  grid-column: 1;
+  -ms-grid-row: 3;
+  -ms-grid-column: 1;
+}
+
+#drum-set > *:nth-child(5) {
+  grid-row: 3;
+  grid-column: 3;
+  -ms-grid-row: 3;
+  -ms-grid-column: 3;
+}
+
+#drum-set > *:nth-child(6) {
+  grid-row: 3;
+  grid-column: 5;
+  -ms-grid-row: 3;
+  -ms-grid-column: 5;
+}
+
+#drum-set > *:nth-child(7) {
+  grid-row: 5;
+  grid-column: 1;
+  -ms-grid-row: 5;
+  -ms-grid-column: 1;
+}
+
+#drum-set > *:nth-child(8) {
+  grid-row: 5;
+  grid-column: 3;
+  -ms-grid-row: 5;
+  -ms-grid-column: 3;
+}
+
+#drum-set > *:nth-child(9) {
+  grid-row: 5;
+  grid-column: 5;
+  -ms-grid-row: 5;
+  -ms-grid-column: 5;
+}
+
+.drum-pad,
+.drum-pad:active {
   width: 100%;
   height: 100%;
   border-radius: 5px;
-  background-color: #0D7377;
+  background-color: #0d7377;
   font-size: 1.2rem;
   font-weight: bolder;
   color: white;
@@ -57,9 +135,18 @@
   height: 100%;
   width: 45%;
   padding: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-pack: space-evenly;
+  -ms-flex-pack: space-evenly;
   justify-content: space-evenly;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   color: white;
 }
@@ -73,7 +160,8 @@
   font-size: 1.7rem;
 }
 
-#bank, #power {
+#bank,
+#power {
   height: 50px;
   text-align: center;
   padding-top: 2px;
