--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,6 @@
   padding: 0;
   width: 100%;
   min-height: 95vh;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
