--- a/src/App.css
+++ b/src/App.css
@@ -52,66 +52,52 @@
 }
 
 #drum-set > *:nth-child(1) {
-  grid-row: 1;
-  grid-column: 1;
   -ms-grid-row: 1;
   -ms-grid-column: 1;
 }
 
 #drum-set > *:nth-child(2) {
-  grid-row: 1;
-  grid-column: 3;
   -ms-grid-row: 1;
   -ms-grid-column: 3;
 }
 
 #drum-set > *:nth-child(3) {
-  grid-row: 1;
-  grid-column: 5;
   -ms-grid-row: 1;
   -ms-grid-column: 5;
 }
 
 #drum-set > *:nth-child(4) {
-  grid-row: 3;
-  grid-column: 1;
   -ms-grid-row: 3;
   -ms-grid-column: 1;
 }
 
 #drum-set > *:nth-child(5) {
-  grid-row: 3;
-  grid-column: 3;
   -ms-grid-row: 3;
   -ms-grid-column: 3;
 }
 
 #drum-set > *:nth-child(6) {
-  grid-row: 3;
-  grid-column: 5;
   -ms-grid-row: 3;
   -ms-grid-column: 5;
 }
 
 #drum-set > *:nth-child(7) {
-  grid-row: 5;
-  grid-column: 1;
   -ms-grid-row: 5;
   -ms-grid-column: 1;
 }
 
 #drum-set > *:nth-child(8) {
-  grid-row: 5;
-  grid-column: 3;
   -ms-grid-row: 5;
   -ms-grid-column: 3;
 }
 
 #drum-set > *:nth-child(9) {
-  grid-row: 5;
-  grid-column: 5;
   -ms-grid-row: 5;
   -ms-grid-column: 5;
+}
+
+.drumpad-list {
+  list-style-type: none;
 }
 
 .drum-pad,
