--- a/src/App.css
+++ b/src/App.css
@@ -7,47 +7,45 @@
 
 #main {
   min-width: 100%;
+  height: 100vh;
   min-height: 100vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+  position: relative;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   background-color: #323232;
 }
 
 #drum-machine {
   height: 350px;
-  -webkit-box-flex: 0;
-  -ms-flex: 0 0 700px;
-  flex: 0 0 700px;
+  width: 700px;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   background-color: #212121;
   border-radius: 5px;
   border: 7px solid #0d7377;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-}
-
-#drum-set-wrapper {
-  height: 100%;
-  width: 55%;
-  padding: 20px;
+  -ms-flex-pack:distribute;
+      justify-content:space-around;
+  padding: 20px 0;
 }
 
 #drum-set {
   height: 100%;
-  width: 100%;
+  width: 65%;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: auto 5px auto 5px auto;
-  grid-template-columns: auto auto auto;
-  -ms-grid-rows: auto 5px auto 5px auto;
-  grid-template-rows: auto auto auto;
+  -ms-grid-columns: 1fr 5px 1fr 5px 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+  -ms-grid-rows: 1fr 5px 1fr 5px 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
   gap: 5px;
 }
 
@@ -103,6 +101,7 @@
 .drum-pad,
 .drum-pad:active {
   width: 100%;
+  min-width: 100px;
   height: 100%;
   border-radius: 5px;
   background-color: #0d7377;
@@ -119,7 +118,7 @@
 
 #controllers {
   height: 100%;
-  width: 45%;
+  width: 35%;
   padding: 20px;
   display: -webkit-box;
   display: -ms-flexbox;
